--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,13 @@ test:
   database: tests
   pool: 5
   timeout: 5000
+  host: localhost
+  port: 5432
 
 production:
   adapter: postgresql
   database: productions
   pool: 5
   timeout: 5000
+  host: localhost
+  port: 5432
